# webliveplot

./: README.md  example1.py  example2.py  example3.py  pyproject.toml
webliveplot/: __init__.py  wlp.py
webliveplot/web/: app.py
webliveplot/web/templates/: chartpage.html  charts.html  notfound.html
