[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "webliveplot"
authors = [{name = "Bernard Czenkusz", email = "bernie@skipole.co.uk"}]
license = "Unlicense"
classifiers = ["Topic :: Scientific/Engineering", "Topic :: Office/Business", "Topic :: Education"]
version = "0.1"
description="Python Web served line plots with updates dynamically displayed"
readme = "README.md"
requires-python = ">=3.12"
keywords=['chart', 'line', 'plot', 'graph', 'web', 'served', 'time']
dependencies = ["litestar[mako]>=2.19.0", "uvicorn", "minilineplot>=0.0.8"]

[project.urls]
Source = "https://github.com/bernie-skipole/webliveplot"


